# mgwrapper

./: CMakeLists.txt  README.md  test.cc
include/: client.h  connect.h  options.h  server.h
src/: client.cc  common.h  connect.cc  iconnect.h  iloop.h  iserver.h  server.cc
web_root/: index.html
